k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host:
      http:
        paths:
          - path: /security
            pathType: Prefix
            backend:
              service:
                name: security-cluster-ip-service
                port:
                  number: 8081
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-cluster-ip-service
                port:
                  number: 8080
